# Image-Compression-with-Kmeans-on-CUDA

./: CMakeLists.txt  LICENSE  README.md
include/: config.h  cuda_tools.h  img_preprocess.h  kmeans.h  kmeans_gpu.h
lib/: cuda_tools.cu  img_preprocess.cpp  kmeans.cpp  kmeans_gpu.cu
results/: compressed.txt  infor.txt
test/: get_device_info.cu  test_function_cuda.cu  test_kmeans.cpp  test_kmeans_cuda.cu  test_read_img.cpp  test_write_img.cpp
